--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ホーム</title>
-    <link rel="stylesheet" href="aknne.css">
+    <link rel="stylesheet" href="akkne.css">
   </head>
    <body>
 <!-- ヘッダー　ーーーーーーー-->
